testing/errors/invalidhexdigit2.a
	*=$1000
	!tx "ab\x9g" 	; -> "Invalid hex digit after \x, expected 0-9/a-f."
